# connectez_fastapi

./: README-Docker-Deployment.md  docker-compose.full-stack.yml  schema.sql
backend/: .dockerignore  .env.example  Dockerfile  SETUP_GUIDE.md  docker-compose.yml  docker-deployment-guide.md  env_template.txt  pyproject.toml
backend/app/: main.py
backend/app/agent/: __init__.py  router.py
backend/app/agent/api/: __init__.py  apiagent.py
backend/app/agent/core/: __init__.py
backend/app/agent/core/agent/: __init__.py  browser_agent.py
backend/app/agent/core/browser/: __init__.py  browser_config.py  browser_context.py
backend/app/agent/core/controller/: __init__.py  browser_controller.py
backend/app/agent/core/utils/: __init__.py  utils.py
backend/app/auth/: dependencies.py  models.py  router.py  service.py
backend/app/db/: crud.py  models.py
backend/app/jobs/: dependencies.py  models.py  router.py  schemas.py
backend/app/jobs/service/: __init__.py  job_service.py  scraper_service.py
backend/app/task/: README.md  TASK_MODULE_SUMMARY.md  __init__.py  dependencies.py  models.py  router.py  schemas.py
backend/app/task/service/: __init__.py  job_agent_service.py  job_recurring_first_service.py  job_recurring_service.py  resume_matching_service.py  seek_scraper_service.py  task_service.py
backend/app/task/utils/: __init__.py  llm_client.py  prompts.py
frontend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  docker-deployment-guide.md  env.example  nginx.conf  package-lock.json  package.json  tsconfig.build.json  (+1 more)
(+27 files in other folders)
